# rag-with-langchain

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: settings.py
src/chains/: conversation.py
src/data/: get_dataset.py  loader.py  main.py  processor.py
src/models/: embeddings.py  vectorstore.py
src/ui/: components.py
src/utils/: compare_embeddings.py  embedding_inspector.py  get_dataset.py
